Added marketsng work details

--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,24 @@
           <div class="wrapper">
             <h1 class="title title--small">Featured Works</h1>
            <div class="works__list">
+            <article class="work">
+              <div class="work__img-container">
+                <img class="work__img" src="assets/images/marketsng.png" alt="marketsng-app">
+              </div>
+              <div class="work__content">
+              <h2 class="work__title">Markets Ng</h2>
+              <div class="work__extras">
+                <span class="work__time-created">2020</span>
+                <span class="work__tag">Retail Ecommerce Store</span>
+              </div>
+              <p class="work__description">
+                 A bespoke business for an online market place that met client's expectations. 
+                 A store built for both sellers and buyers for easy sourcing and selling of products at
+                 discounted prices with great user experience.
+
+              </p>
+              </div>
+             </article>
              <article class="work">
               <div class="work__img-container">
                 <img class="work__img" src="assets/images/moje.png" alt="moje-app">
